[package]
name = "hyperpixel"
version = "0.1.1"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a fast framebuffer in webgl using ThreeJS"
repository = "https://www.github.com/richardanaya/hyperpixel"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_ffi = "0.5"
