[package]
name = "example"
version = "0.1.0"
authors = ["richard <richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperpixel = {path="../../"}
web_timer = "0.1"
web_random = "0.0"
js_ffi = "0.5"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
